add actions onthis project

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,7 @@
 <div class="container my-5">
 
   <footer class="text-center text-lg-start" style="background-color: #db6930;">
+         <h5 style="text-align:center">Gaurav Singh</h5>
     <div class="container d-flex justify-content-center py-5">
       <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
         <i class="fab fa-facebook-f"></i>
