--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,8 +1,8 @@
 <div class= "col-lg-12">
   <div class="card rounded-0 mt-5 mb-5">
     <div class="card-body">
-      <h2 class="text-center">Create new Employees</h2>
+      <h2 class="text-center">Edit Employees Information</h2>
     </div>
   </div>
-  <%= render 'shared/form', employee: @employee%>
+    <%= render 'shared/form', employee: @employee%>
 </div>
