--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,24 +1,36 @@
-<div class="card mt-5 mb-5">
-  <div class="card-body">
-    <h2 class="text-center">Listing Employees</h2>
+<div class="col-lg-12">
+  <%= flash[:notice]%>
+  <div class="card mt-5 mb-5">
+    <div class="card-body">
+      <h2 class="text-center">Listing Employees</h2>
+    </div>
   </div>
-</div>
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Address</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @employees.each do |employee|%>
+  <div class="row">
+    <div class ="col-g-12 mt-1 mb-2">
+        <%= link_to 'Create new Employee', new_employee_path ,class: "btn btn-outline-primary rounded-0"%>
+    </div>
+  </div>
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= employee.name %></td>
-        <td><%= employee.personal_email %></td>
-        <td><%= employee.full_address%></td>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Address</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @employee.each do |employee|%>
+        <tr>
+          <td><%= employee.name %></td>
+          <td><%= employee.personal_email %></td>
+          <td><%= employee.full_address%></td>
+          <td><%= link_to "Edit", edit_employee_path(employee),class: "btn btn-primary"%>
+         <%= link_to "View", employee_path(employee),class: "btn btn-info"%></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
       
