--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
 <%= render 'shared/link'%>
+  <div class="row">
+    <div class ="col-g-12 mt-1 mb-2">
+      <%= link_to 'Back to Employee' , employees_path,class:'btn btn-primary btn-lg rounded-0'%>
+    </div>
+  </div>
