--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -6,7 +6,7 @@
         <div class='col-lg-6'>
           <h3 class="mb-3">Personal Information</h3>
           <p class='lead'><strong>First Name:</strong><%=@employee.first_name%></p>
-          <p class='lead'><strong>Middle Name:</strong><%= @employee.middle_name.present? ? @employee.middle_name : 'NA' %></p>
+          <p class='lead'><strong>Middle Name:</strong><%= @employee.middle_name.present? ? @employee.middle_name : '--NA--' %></p>
           <p class='lead'><strong>last Name:</strong><%=@employee.last_name%></p>
           <p class='lead'><strong>Personal Email:</strong><%=@employee.personal_email%></p>
         </div>
