--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -24,7 +24,44 @@
           <%end%>
         </div>
        </div>
-     </div>
+       <div class="col-lg-4">
+        <div class="form-group">
+          <%= form.label :date_of_birth, class: 'mb-2'%>
+          <%= form.date_field :date_of_birth,class: 'form-control form-control-lg rounded-0'%>
+          <% @employee.errors.full_messages_for(:date_of_birth).each do |message|%>
+          <p class="text-danger"><%= message%></p>
+          <%end%>
+        </div>
+       </div>
+       <div class="col-lg-4">
+        <div class="form-group">
+          <%= form.label :date_of_joining, class: 'mb-2'%>
+          <%= form.date_field :date_of_joining,class: 'form-control form-control-lg rounded-0'%>
+          <% @employee.errors.full_messages_for(:date_of_joining).each do |message|%>
+          <p class="text-danger"><%= message%></p>
+          <%end%>
+        </div>
+       </div>
+       <div class="col-lg-4">
+  <div class="form-group">
+    <%= form.label :job_title, class: 'mb-2' %>
+    <%= form.text_field :job_title, class: 'form-control form-control-lg rounded-0' %>
+    <% if @employee.errors[:job_title].any? %>
+      <p class="text-danger"><%= @employee.errors.full_messages_for(:job_title).join(', ') %></p>
+    <% end %>
+  </div>
+</div>
+
+       <div class="col-lg-12">
+         <div class="form-group">
+           <%= form.label :bio, class: 'mb-2' %>
+           <%= form.text_area :bio, class: 'form-control form-control-lg rounded-0', rows: 5 %>
+           <% @employee.errors.full_messages_for(:bio).each do |message| %>
+           <p class="text-danger"><%= message %></p>
+           <% end %>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col-lg-6">
           <div class="form-group">
