--- a/app/views/documents/_share.html.erb
+++ b/app/views/documents/_share.html.erb
@@ -24,8 +24,16 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="form-group">
+            <%= form.label :image, class: 'mb-2'%><br>
+            <%= form.file_field :image%>
+          </div>
+        </div>
+      </div> 
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="form-group">
             <%= form.label :employee_id, class: 'mb-2'%>
-              <%= form.number_field :employee_id,class: 'form-control form-control-lg rounded-0'%>
+            <%= form.select :employee_id, options_for_select(Employee.all.map {|employee|[employee.name_with_email,employee.id]}),{prompt: 'Select Employee'},{class:'form-select form_select-lg rounded-0'}%>
                 <% @document.errors.full_messages_for(:employee_id).each do |message|%>
                   <p class="text-danger"><%= message%></p>
                 <%end%>
