--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -2,24 +2,52 @@
   <div class="card rounded-0 mt-5 mb-5">
     <div class="card-body">
       <h2 class="text-center"> Employee Details </h2>
-      <div class='row mt-5'>
+    <div class='row mt-5'>
         <div class='col-lg-6'>
           <h3 class="mb-3">Personal Information</h3>
           <p class='lead'><strong>First Name:</strong><%=@employee.first_name%></p>
           <p class='lead'><strong>Middle Name:</strong><%= @employee.middle_name.present? ? @employee.middle_name : '--NA--' %></p>
           <p class='lead'><strong>last Name:</strong><%=@employee.last_name%></p>
           <p class='lead'><strong>Personal Email:</strong><%=@employee.personal_email%></p>
+          <p class='lead'><strong>Job Title:</strong><%=@employee.job_title%></p>
+          <p class='lead'><strong>Date of Birth:</strong><%=@employee.date_of_birth%></p>
+          <p class='lead'><strong>Date of Joining:</strong><%=@employee.date_of_joining%></p>
+          <p class='lead'><strong>Bio:</strong><%=@employee.bio%></p>
         </div>
         <div class='col-lg-6'>
           <h3 class="mb-3">Address Information</h3>
-          <p class='lead'><strong>Address Line 1:</strong><%=@employee.address_line_1%></p>
-          <p class='lead'><strong>Address Line 2:</strong><%=@employee.address_line_2%></p>
-          <p class='lead'><strong>City:</strong><%=@employee.city%></p>
-          <p class='lead'><strong>State:</strong><%=@employee.state%></p>
-          <p class='lead'><strong>Country:</strong><%=@employee.country%></p>
-          <p class='lead'><strong>Pincode:</strong><%=@employee.pincode%></p>
+          <p class='lead'><strong>Address Line 1:- </strong><%=@employee.address_line_1%></p>
+          <p class='lead'><strong>Address Line 2:- </strong><%=@employee.address_line_2%></p>
+          <p class='lead'><strong>City:- </strong><%=@employee.city%></p>
+          <p class='lead'><strong>State:- </strong><%=@employee.state%></p>
+          <p class='lead'><strong>Country:- </strong><%=@employee.country%></p>
+          <p class='lead'><strong>Pincode:- </strong><%=@employee.pincode%></p>
         </div>
       </div>
+      <div class='row mt-5'>
+       <h2 class="text-center">Employee Documents</h2>
+         <% @employee.documents.each do |document| %>
+           <div class="card  mb-4">
+             <div class="card-body">
+              <div class="row">
+          <% if document.image.attached? %>
+            <div class='col-lg-6'>
+              <%= image_tag document.image, style: "vertical-align: middle; width: 300px; height: 200px;" %>
+            </div>
+          <% end %>
+          <div class='col-lg-6'>
+            <p class='lead'><strong>Doc_name:- </strong><%= document.name %></p>
+          </div>
+          <div class='col-lg-6'>
+            <p class='lead'> <strong>Doc_type:- </strong><%= document.doc_type %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
       <%= link_to 'Back to Employee' , employees_path,class:'btn btn-primary btn-lg rounded-0'%>
       <%= link_to 'Edit Employee' , edit_employee_path(@employee),class:'btn btn-primary btn-lg rounded-0'%>
 
