--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/link'%>
+   <%= image_tag('welcome.jpg', width: '355', height: '600') %>
   <div class="row">
     <div class ="col-g-12 mt-1 mb-2">
       <%= link_to 'Back to Employee' , employees_path,class:'btn btn-primary btn-lg rounded-0'%>
